--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Calculator</string>
     <string name="app_about">About</string>
     <string name="app_gt_screen">GT</string>
+    <string name="app_tax_rate">Tax Rate</string>
 </resources>
