--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Calculator</string>
     <string name="app_about">About</string>
-    <string name="app_gt_screen">GT</string>
-    <string name="app_tax_rate">Tax Rate</string>
+    <string name="app_gt_sign">GT</string>
+    <string name="app_tax_rate_sign">Tax Rate</string>
+    <string name="app_memory_sign">M</string>
 </resources>
