--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,17 @@
 <resources>
-    <string name="app_name">Calculator</string>
+    <string name="app_name">Easy Calculator</string>
     <string name="app_about">About</string>
     <string name="app_gt_sign">GT</string>
     <string name="app_tax_rate_sign">Tax Rate</string>
     <string name="app_memory_sign">M</string>
+
+    <string name="app_about_version">Version:</string>
+    <string name="app_about_code">Code:</string>
+    <string name="app_about_copyright">Copyright: 2017 Volodymyr Baisa</string>
+    <string name="app_about_text"><b>Thank you for using the Easy Calculator.</b>
+        \nIf you have any questions or have found a bug, please report it at <a href="https://github.com/VolodymyrBaisa/Calculator/issues">Issue Tracker</a>
+        \nThe list of known bugs is available <a href="https://github.com/VolodymyrBaisa/Calculator/issues">here</a>
+    \nThis software is provided <b>AS-IS</b> with no warranty of any kind.
+    \nEasy Calculator is distributed under the GNU Lesser General Public License as published by the Free Software Foundation. See license-lgpl-3.0.txt for details.</string>
+    <string name="app_about_back_button">Back</string>
 </resources>
