--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Easy Calculator</string>
     <string name="app_about">About</string>
+    <string name="app_settings">Settings</string>
     <string name="app_gt_sign">GT</string>
     <string name="app_tax_rate_sign">Tax Rate</string>
     <string name="app_memory_sign">M</string>
@@ -17,4 +18,28 @@
         \nEasy Calculator is distributed under the GNU Lesser General Public License as published by the Free Software Foundation.
         \nSee <a href="https://github.com/VolodymyrBaisa/Calculator/blob/master/licenses/gpl.text">license-lgpl-3.0.txt</a> for details.</string>
     <string name="app_about_back_button">Back</string>
+
+
+    <string name="app_pref_category_vibration">Vibration settings</string>
+    <string name="app_pref_vibration">Vibration</string>
+    <string name="app_pref_vibration_length">Vibration length</string>
+    <string name="app_pref_vibration_length_dialog_message">Value in milliseconds</string>
+
+    <string name="app_pref_category_screen">Screen settings</string>
+    <string name="app_pref_screen_font_color">Font color</string>
+    <string name="app_pref_screen_font_color_black">Black</string>
+    <string name="app_pref_screen_font_color_blue">Blue</string>
+    <string name="app_pref_screen_font_color_gray">Gray</string>
+    <string name="app_pref_screen_font_color_purple">Purple</string>
+    <string name="app_pref_screen_font_color_green">Green</string>
+    <string name="app_pref_screen_font_color_orange">Orange</string>
+    <string name="app_pref_screen_font_color_pink">Pink</string>
+    <string name="app_pref_screen_font_color_light_green">Light green</string>
+    <string name="app_pref_screen_font_color_ruby_red">Ruby red</string>
+
+    <string name="app_pref_screen_font_size">Font size</string>
+    <string name="app_pref_screen_keep_on">Keep screen</string>
+    
+    <string name="app_pref_category_keyboard">Keyboard settings</string>
+    <string name="app_pref_keyboard_font_size">Font size</string>
 </resources>
