--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Easy Calculator</string>
+    <string name="app_name">Calculator Plus</string>
     <string name="app_about">About</string>
     <string name="app_settings">Settings</string>
     <string name="app_gt_sign">GT</string>
@@ -19,10 +19,6 @@
         \nSee <a href="https://github.com/VolodymyrBaisa/Calculator/blob/master/licenses/gpl.text">license-lgpl-3.0.txt</a> for details.</string>
     <string name="app_about_back_button">Back</string>
 
-
-    <string name="app_pref_category_vibration">Vibration settings</string>
-    <string name="app_pref_vibration">Vibration</string>
-
     <string name="app_pref_category_screen">Screen settings</string>
     <string name="app_pref_screen_font_color">Font color</string>
     <string name="app_pref_screen_font_color_black">Black</string>
@@ -38,7 +34,8 @@
     <string name="app_pref_screen_text_lines">Lines</string>
     <string name="app_pref_screen_font_size">Font size</string>
     <string name="app_pref_screen_keep_on">Keep screen enable</string>
-    
+
     <string name="app_pref_category_keyboard">Keyboard settings</string>
+    <string name="app_pref_vibration">Vibration</string>
     <string name="app_pref_keyboard_font_size">Font size</string>
 </resources>
