--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="app_about_version">Version:</string>
     <string name="app_about_code">Code:</string>
     <string name="app_about_copyright">Copyright: 2017\n Volodymyr Baisa</string>
-    <string name="app_about_text"><b>Thank you for using the Easy Calculator.</b>
+    <string name="app_about_text"><b>Thank you for using the Calculator Plus.</b>
         \nIf you have any questions or have found a bug, please report it at <a href="https://github.com/VolodymyrBaisa/Calculator/issues">Issue Tracker</a>.
         \nThe list of known bugs is available <a href="https://github.com/VolodymyrBaisa/Calculator/issues">here</a>.
         \n\n<b>Disclaimer</b>
