--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
         \n\n<b>Disclaimer</b>
         \nThis software is provided <b>AS-IS</b> with no warranty of any kind.
         \n\n<b>License</b>
-        \nEasy Calculator is distributed under the GNU Lesser General Public License as published by the Free Software Foundation.
+        \nCalculator Plus is distributed under the GNU Lesser General Public License as published by the Free Software Foundation.
         \nSee <a href="https://github.com/VolodymyrBaisa/Calculator/blob/master/licenses/gpl.text">license-lgpl-3.0.txt</a> for details.</string>
     <string name="app_about_back_button">Back</string>
 
